# algo-app-dev

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
docs/: apps.html  clients.html  dryruns.html  index.html  testing.html  transactions.html  utils.html
docs/html/pyteal_utils/: apps.html  clients.html  dryruns.html  index.html  testing.html  transactions.html  utils.html
docs/html/pyteal_utils/scripts/: index.html  make_node.html  run_node.html
docs/scripts/: index.html  make_node.html  run_node.html
src/algoappdev/: __init__.py  apps.py  clients.py  dryruns.py  testing.py  transactions.py  utils.py
src/algoappdev/scripts/: __init__.py  make_node.py  run_node.py
src/pyteal_utils/: apps.py  clients.py  dryruns.py  testing.py  transactions.py  utils.py
src/pyteal_utils/data/: network_private.json  network_private_dev.json
src/pyteal_utils/scripts/: make_node.py  run_node.py
tests/: conftest.py  test_apps.py  test_clients.py  test_dryruns.py  test_transactions.py  test_utils.py
