[metadata]
name = pyteal-utils
version = 0.0.1
author = Garrin McGoldrick
author_email = garrin.mcgoldrick@gmail.com
description = Utilities to help in the development of PyTeal contracts for Algorand

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    py-algorand-sdk >= 1.8
    pyteal >= 0.9
    setuptools >= 40

[options.package_data]
pyteal_utils =
    data/network_private_dev.json
    data/network_private.json

[options.entry_points]
console_scripts =
    ptu-make-node = pyteal_utils.scripts.make_node:main_args
    ptu-run-node = pyteal_utils.scripts.run_node:main_args

[options.packages.find]
where = src

[options.extras_require]
dev = pytest
